# FastStatisticsAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_table.sql  pre-push.sh  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  endpoints.py  router.py
app/core/: config.py
app/db/: base.py  db_manager.py  session.py
app/models/: statistics.py
app/schemas/: __init__.py  statistics.py
