[tool.poetry]
name = "faststatisticsapi"
version = "0.1.0"
description = "FastStatisticsAPI project"
authors = ["whatislove118 <oleg.pochikalin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
alembic = "^1.7.6"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.31"}
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
toml = "^0.10.2"
python-multipart = "^0.0.5"

greenlet = "^1.1.2"


[tool.poetry.dev-dependencies]
autoflake = "^1.4"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "sqlmypy,pydantic.mypy"
exclude = "alembic"
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
